force-app/main/default/objects/Log_Entry__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <formula>IMAGE(  
CASE( Level_Text__c, 
      &apos;DEBUG&apos;, &apos;/resource/Success_Icon&apos;, 
      &apos;ERROR&apos;, &apos;/resource/Error_Icon&apos;,
      &apos;EXCEPTION&apos;, &apos;/resource/Exception_Icon&apos;,
      &apos;Nothing&apos;), 
Level_Text__c , 22, 22) + &apos; &apos; + Level_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level #</label>
    <type>Text</type>
</CustomField>