force-app/main/default/objects/Log_Entry__c/fields/Level_Text__c.field-meta.xml
<CustomField>
    <fullName>Level_Text__c</fullName>
    <label>Level Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>