force-app/main/default/objects/Log_Entry__c/fields/Log_Detail__c.field-meta.xml
<CustomField>
    <fullName>Log_Detail__c</fullName>
    <label>Log Detail</label>
    <referenceTo>Log_Detail__c</referenceTo>
    <relationshipLabel>Log Entries</relationshipLabel>
    <relationshipName>Log_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>