force-app/main/default/objects/Log_Entry__c/fields/Message_Stacktrace__c.field-meta.xml
<CustomField>
    <fullName>Message_Stacktrace__c</fullName>
    <label>Message Stacktrace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>