force-app/main/default/objects/Log_Entry__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; +  Record_Id__c ,  Record_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related To</label>
    <type>Text</type>
</CustomField>