force-app/main/default/objects/Log_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Message__c</columns>
    <columns>Component_Type__c</columns>
    <columns>Related_To__c</columns>
    <columns>Level__c</columns>
    <columns>Entry__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>