force-app/main/default/objects/Log_Entry__c/listViews/Log_Entries_From_Apex.listView-meta.xml
<ListView>
    <fullName>Log_Entries_From_Apex</fullName>
    <columns>NAME</columns>
    <columns>Class_Name__c</columns>
    <columns>Related_To__c</columns>
    <columns>Level__c</columns>
    <columns>Entry__c</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Component_Type__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Log Entries From Apex</label>
</ListView>